# pdftricks

./: .buildconfig  .travis.yml  README.md  com.github.muriloventuroso.pdftricks.yml  config.vala  config.vala.in  meson.build
data/: com.github.muriloventuroso.pdftricks.appdata.xml.in  com.github.muriloventuroso.pdftricks.desktop.in  com.github.muriloventuroso.pdftricks.desktop.in.in  meson.build  pdftricks.desktop.in  pdftricks.gresource.xml  pdftricks.metainfo.xml.in
debian/: changelog  control  copyright  rules
po/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  com.github.muriloventuroso.pdftricks.pot  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  (+158 more)
po/extra/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  de_FORM.po  dv.po  dz.po  ee.po  (+158 more)
src/: Application.vala  Format.vala  MainWindow.vala
src/Backend/: Compress.vala  Convert.vala  Merge.vala  Split.vala
src/Enums/: Compression.vala  Format.vala
src/Views/: CompressPDF.vala  ConvertPDF.vala  MergePDF.vala  PageTemplate.vala  SplitPDF.vala  Welcome.vala
src/Widgets/: CompressPDF.vala  ConvertPDF.vala  FileChooserButton.vala  MergeList.vala  MergePDF.vala  SplitCheckButtons.vala  SplitPDF.vala  Welcome.vala
